[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "A library and CLI tool for rendering Markdown documents with syntax highlighting and rich text formatting"
edition = "2024"
exclude = ["tests/*", "examples/*", "docs/*", ".github/*"]
homepage = "https://mqlang.org"
keywords = ["markdown", "syntax-highlighting", "terminal", "cli"]
license = "MIT"
name = "mq-view"
readme = "README.md"
repository = "https://github.com/harehare/mq-view"
version = "0.1.3"

[lib]
name = "mq_view"
path = "src/lib.rs"

[[bin]]
name = "mq-view"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.48", features = ["derive"]}
colored = "3.0.0"
image = "0.25"
itertools = "0.14.0"
miette = {version = "7.6.0", features = ["fancy"]}
mq-markdown = "0.5.5"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.23"
tree-sitter-c = "0.24"
tree-sitter-clojure = "0.1.0"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25"
tree-sitter-elm = "5.8.0"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23.1"
tree-sitter-highlight = "0.25.10"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-mq = {git = "https://github.com/harehare/tree-sitter-mq.git"}
tree-sitter-ocaml = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.23.2"
viuer = {version = "0.9"}

[dev-dependencies]
rstest = "0.26.1"
